--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="appmysqlphp.app.andrevera.com.appmysqlphp">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <!-- http://developer.android.com/intl/es/training/basics/network-ops/connecting.html
+    de aqui sacamos los permisos para el uso de internet y verificacion de su estado -->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
